# vdev

./: .gitignore  CMakeLists.txt  bootstrap.sh  build.sh  compile_commands.json  event.cpp  guard.cpp  main.cpp  plantuml.cpp  sml.cpp  vdev.hpp
cmake/Modules/: FindSml.cmake
include/: guard.hpp  vdev.hpp
